# BayunSDK

./: README.md
Android/: README.md
Android/BayunCoreSDK/: README.md
Android/Quick Start/Hello World/: local.properties  settings.gradle
Android/S3Wrapper/: SecureAmazonS3Client.java  SecureAuthentication.java  SecureTransferObserver.java  SecureTransferUtility.java
Android/TestApps/BayunRC/: .gitignore  README.md  build.gradle  local.properties  settings.gradle
Android/TestApps/BayunS3/: README.md  build.gradle  local.properties  settings.gradle
Bayun/Android/S3Wrapper/: SecureAmazonS3Client.java
Bayun/iOS/S3Wrapper/: SecureAWSS3Service.h  SecureAWSS3Service.m  SecureAWSS3TransferManager.m
C++/: README.md
C++/Debian 9/include/: BayunResponses.h
C++/MacOSX-arm64/include/: BayunCore.h  BayunEnums.h  BayunException.h  BinaryData.h
C++/MacOSX-x86_64/: test.cc
C++/Ubuntu 18.04/: test.cc
C++/Ubuntu 20.04/: README.md
C++/Ubuntu 22.04/: CMakeLists.txt  README.md  test.cc
C++/Ubuntu 22.04/include/: BayunCore.h  BayunEnums.h  BayunException.h  BayunResponses.h  BinaryData.h
JavaScript/: README.md
JavaScript/BayunCoreSDK/: README.md  test.js
JavaScript/S3Wrapper/: secureAuthentication.js  secureS3.js
New-Release/Javascript/: README.md  test.js
Sandbox-Release/Javascript/: test.html  test.js
iOS/: README.md
iOS/S3Wrapper/: SecureAWSS3Service.h  SecureAWSS3Service.m  SecureAWSS3TransferManager.h  SecureAWSS3TransferManager.m  SecureAWSS3TransferUtility.h  SecureAWSS3TransferUtility.m  SecureAuthentication.h  SecureAuthentication.m
(+489 files in other folders)
